--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <ul class="sec-active">
                             <a href="#">
                                 <i class="fas fa-home"></i>
-                                <p>home</p>
+                                <p>Home</p>
                             </a>
                         </ul>
                         <ul>
