--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Discover unique phones! Browse a selection of all categories of new and old phones with amazing capabilities.</p>
                     <button>SHOP NOW</button>
                 </div>
-                <div class="home-img"><div class="img-home"><img src="/img/iPhone_15_Pro_Mockups-removebg-preview.jpeg" alt=""></div></div>
+                <div class="home-img"><div class="img-home"><img src="/img/15.jpeg" alt=""></div></div>
             </div>
         </section><!-- end home -->
         <section class="trans">
